feat: changes types structures
