# internal/http/dto/config.go
@@ -1,8 +1,8 @@
 package dto
 
 type ConfigResponse struct {
-	Status      string `json:"status" example:"ok"`
-	Port        string `json:"port" example:"ok"`
-	DatabaseUrl string `json:"databaseUrl" example:"ok"`
-	Secret      string `json:"secret" example:"ok"`
+	Status      string `json:"Status" example:"ok" binding:"required"`
+	Port        string `json:"Port" example:"8080" binding:"required"`
+	DatabaseUrl string `json:"http://localhost:27017" example:"ok" binding:"required"`
+	Secret      string `json:"Secret" example:"ok" binding:"required"`
 }
