# internal/http/dto/user.go
@@ -1,12 +1,12 @@
 package dto
 
 type RegisterRequest struct {
-	Email    string `json:"email" example:"test@mail.com"`
-	Password string `json:"password" example:"123456"`
+	Email    string `json:"Email" example:"test@mail.com" binding:"required"`
+	Password string `json:"Password" example:"123456" binding:"required"`
 }
 
 type UserResponse struct {
-	ID         string `json:"id" example:"64f8c..."`
-	Email      string `json:"email" example:"test@mail.com"`
-	CreateDate string `json:"create_date" example:"2026-01-20T00:00:00Z"`
+	ID          string `json:"ID" example:"64f8c..." binding:"required"`
+	Email       string `json:"Email" example:"test@mail.com" binding:"required"`
+	CreatedDate string `json:"CreatedDate" example:"2026-01-20T00:00:00Z" binding:"required"`
 }
